Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,40 +4,29 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>sumi-color by rainersu</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/rainersu/color">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/rainersu/color/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/rainersu/color/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
     <div class="wrapper">
-
+      <header>
+        <h1>sumi-color</h1>
+        <p>A standalone Javascript library for all kinds of color manipulations.</p>
+        <p class="view"><a href="https://github.com/rainersu/color">View the Project on GitHub <small>rainersu/color</small></a></p>
+        <ul>
+          <li><a href="https://github.com/rainersu/color/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/rainersu/color/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/rainersu/color">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
       <section>
-        <div id="title">
-          <h1>sumi-color</h1>
-          <p>A standalone Javascript library for all kinds of color manipulations.</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/rainersu">rainersu</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
-
         <h1>
 <a id="sumi-color" class="anchor" href="#sumi-color" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://www.npmjs.com/package/sumi-color">sumi-color</a>
 </h1>
@@ -73,7 +62,7 @@
 
 <ul>
 <li>
-<a href="https://github.com/rainersu/color/archive/v1.0.1.zip">Download the latest release</a>.</li>
+<a href="https://github.com/rainersu/color/archive/v1.0.3.zip">Download the latest release</a>.</li>
 <li>Clone the repo: <code>git clone https://github.com/rainersu/color.git</code>.</li>
 <li>Install with <a href="http://bower.io">Bower</a>: <code>bower install sumi-color</code>.</li>
 <li>Install with <a href="https://www.npmjs.com">npm</a>: <code>npm install sumi-color</code>.</li>
@@ -84,7 +73,7 @@
 
 <p>Including in a browser:</p>
 
-<div class="highlight highlight-html"><pre>&lt;<span class="pl-ent">script</span> <span class="pl-e">type</span>=<span class="pl-s"><span class="pl-pds">'</span>text/javascript<span class="pl-pds">'</span></span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">'</span>/path/to/sumi-color-1.0.1.min.js<span class="pl-pds">'</span></span>&gt;&lt;/<span class="pl-ent">script</span>&gt;
+<div class="highlight highlight-html"><pre>&lt;<span class="pl-ent">script</span> <span class="pl-e">type</span>=<span class="pl-s"><span class="pl-pds">'</span>text/javascript<span class="pl-pds">'</span></span> <span class="pl-e">src</span>=<span class="pl-s"><span class="pl-pds">'</span>/path/to/sumi-color-1.0.3.min.js<span class="pl-pds">'</span></span>&gt;&lt;/<span class="pl-ent">script</span>&gt;
 <span class="pl-s1">&lt;<span class="pl-ent">script</span> <span class="pl-e">type</span>=<span class="pl-s"><span class="pl-pds">'</span>text/javascript<span class="pl-pds">'</span></span>&gt;</span>
 <span class="pl-s1"><span class="pl-k">var</span> Color <span class="pl-k">=</span> sumiColor.Color;</span>
 <span class="pl-s1"><span class="pl-k">var</span> tiffanyblue <span class="pl-k">=</span> <span class="pl-k">new</span> <span class="pl-en">Color</span>(<span class="pl-s"><span class="pl-pds">'</span>#60DFE5<span class="pl-pds">'</span></span>);</span>
@@ -149,8 +138,11 @@ $ grunt</pre></div>
 
 <p>Code and documentation is free to use under the <a href="https://github.com/rainersu/color/blob/master/LICENSE.md">BSD license</a>.</p>
       </section>
-
     </div>
+    <footer>
+      <p>Project maintained by <a href="https://github.com/rainersu">rainersu</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
